# Alakajam14

./: .clang-tidy  CMakeLists.txt  README.md  index.html
impl/gamelib/: CMakeLists.txt  character.cpp  character.hpp  character_sheet_imgui.cpp  character_sheet_imgui.hpp  crystal_projectile.cpp  crystal_projectile.hpp  damage.h  damage.hpp  deferred_action_interface.hpp  experience_orb.cpp  experience_orb.hpp  experience_spawner_interface.hpp  game_properties.cpp  game_properties.hpp  game_properties.hpp.orig  guile.cpp  guile.hpp  healing_potion.cpp  healing_potion.hpp  key.cpp  key.hpp  level.cpp  level.hpp  player.cpp  player.hpp  projectile_spawner_interface.hpp  shroom_game_contact_listener.cpp  shroom_game_contact_listener.hpp  snipe_projectile.cpp  snipe_projectile.hpp  stairs.cpp  stairs.hpp  state_game.cpp  state_game.hpp  state_menu.cpp  state_menu.hpp  target_interface.hpp  world_path_calculator_interface.hpp
impl/gamelib/dialog/: dialog.cpp  dialog.hpp  dialog_info.hpp  dialog_serializer.cpp  dialog_serializer.hpp
impl/gamelib/enemies/: enemy.cpp  enemy.hpp  enemy_base.cpp  enemy_base.hpp  enemy_crystal_boss.cpp  enemy_crystal_boss.hpp  enemy_crystal_large.cpp  enemy_crystal_large.hpp  enemy_crystal_medium.cpp  enemy_crystal_medium.hpp  enemy_crystal_mid.cpp  enemy_crystal_mid.hpp  enemy_crystal_small.cpp  enemy_crystal_small.hpp  enemy_grunt.cpp  enemy_grunt.hpp  enemy_info.hpp  enemy_serialization.cpp  enemy_serialization.hpp
impl/gamelib/hud/: experience_display.cpp  experience_display.hpp  health_display.cpp  health_display.hpp  hud.cpp  hud.hpp
(+120 files in other folders)
